commiting updated pandas and numpy exercises

--- a/pandas_series.ipynb
+++ b/pandas_series.ipynb
@@ -393,9 +393,87 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "1d69e6bb",
+   "metadata": {},
+   "source": [
+    "# Pandas Exercises Part 2"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 58,
    "id": "f2d1b096",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0                 Kiwi\n",
+       "1                Mango\n",
+       "2           Strawberry\n",
+       "3            Pineapple\n",
+       "4           Gala apple\n",
+       "5     Honeycrisp apple\n",
+       "6               Tomato\n",
+       "7           Watermelon\n",
+       "8             Honeydew\n",
+       "9                 Kiwi\n",
+       "10                Kiwi\n",
+       "11                Kiwi\n",
+       "12               Mango\n",
+       "13           Blueberry\n",
+       "14          Blackberry\n",
+       "15          Gooseberry\n",
+       "16              Papaya\n",
+       "Name: fruits, dtype: object"
+      ]
+     },
+     "execution_count": 58,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# 1.  Capitalize all the string values in fruits.\n",
+    "\n",
+    "fruits.str.capitalize()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a1fd85f3",
+   "metadata": {},
+   "source": [
+    "## 2. Count the letter \"a\" in all the string values (use string vectorization)."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 80,
+   "id": "dac9055d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "14"
+      ]
+     },
+     "execution_count": 80,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a_count = fruits.str.count('a') #create variable that counts the occurances of 'a' in each row\n",
+    "a_count.sum()  #use above variable to find the total amount of 'a' in all the string values"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 81,
+   "id": "4ecb6bc8",
    "metadata": {},
    "outputs": [
     {
@@ -421,46 +499,175 @@
        "Name: fruits, dtype: int64"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 81,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# How can I use `.apply()` with a lambda function to count the letter 'r' in each value in my 'colors_series'?\n",
-    "\n",
-    "fruits.apply(lambda row: row.count('a'))"
+    "fruits.str.count('a')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
-   "id": "dac9055d",
+   "execution_count": 75,
+   "id": "d3e6cb0f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 3.  Output the number of vowels in each and every string value.\n",
+    "vowels = list('aeiou')\n",
+    "def count_vowels(fruits):\n",
+    "    return len([letter for letter in fruits.lower() if letter in vowels])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 76,
+   "id": "c7e6d377",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "14"
+       "0     2\n",
+       "1     2\n",
+       "2     2\n",
+       "3     4\n",
+       "4     4\n",
+       "5     5\n",
+       "6     3\n",
+       "7     4\n",
+       "8     3\n",
+       "9     2\n",
+       "10    2\n",
+       "11    2\n",
+       "12    2\n",
+       "13    3\n",
+       "14    2\n",
+       "15    4\n",
+       "16    3\n",
+       "Name: fruits, dtype: int64"
       ]
      },
-     "execution_count": 49,
+     "execution_count": 76,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "a_count = fruits.str.count('a')\n",
-    "a_count.sum()"
+    "fruits.apply(count_vowels)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 82,
+   "id": "bddaa94f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0     0\n",
+       "1     1\n",
+       "2     1\n",
+       "3     1\n",
+       "4     3\n",
+       "5     1\n",
+       "6     1\n",
+       "7     1\n",
+       "8     0\n",
+       "9     0\n",
+       "10    0\n",
+       "11    0\n",
+       "12    1\n",
+       "13    0\n",
+       "14    1\n",
+       "15    0\n",
+       "16    3\n",
+       "Name: fruits, dtype: int64"
+      ]
+     },
+     "execution_count": 82,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "fruits.str.count('a')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 84,
+   "id": "64e5979b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'honeycrisp apple'"
+      ]
+     },
+     "execution_count": 84,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# 4.  Write the code to get the longest string value from fruits.\n",
+    "max(fruits, key = len)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 74,
+   "id": "c4951696",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 5. Write the code to get the string values with 5 or more letters in the name."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4ecb6bc8",
+   "id": "b6e9e595",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# 6. Use the .apply method with a lambda function to find the fruit(s) containing the letter \"o\" two or more times."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b3a74a22",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 7. Write the code to get only the string values containing the substring \"berry\". "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a95c38fd",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 8.  Write the code to get only the string values containing the substring \"apple\"."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d5caa649",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 9.  Which string value contains the most vowels?"
+   ]
   }
  ],
  "metadata": {
