--- a/numpy_exercises.ipynb
+++ b/numpy_exercises.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "0c1c2827",
+   "id": "c498e5f2",
    "metadata": {},
    "source": [
     "# numpy exercises"
@@ -231,9 +231,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "99d7d2db",
+   "metadata": {},
+   "source": [
+    "## A common statistical operation on a dataset is centering. This means to adjust the data such that the mean of the data is 0. This is done by subtracting the mean from each data point. Center the data set. See this link for more on centering."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6f502af1",
+   "id": "797e621d",
    "metadata": {},
    "outputs": [],
    "source": []
